--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,4 @@
-name: PIPELINE
+name: Secure CI/CD Pipeline 
 
 on:
   push:
@@ -12,10 +12,9 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]  
+        node-version: [18]  
 
     env:
-      
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       API_KEY: ${{ secrets.API_KEY }}
 
@@ -26,7 +25,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          
+          cache: 'npm'  
+          cache-dependency-path: 'package-lock.json'  
 
       - name: Install dependencies (common)
         run: npm ci  
@@ -37,25 +37,16 @@ jobs:
       - name: Build and test Backend (if present)
         run: |
           if [ -d "Backend" ]; then
-            cd Backend && npm run build && npm test
+            cd Backend && npm install && npm run build && npm test
             # Add error handling or logging (optional)
           fi
 
       - name: Build and test Frontend (if present)
         run: |
           if [ -d "Frontend" ]; then
-            cd Frontend && npm run build && npm test
+            cd Frontend && npm install && npm run build && npm test
             # Add error handling or logging (optional)
           fi
 
-      - name: Upload coverage reports (optional)
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage_${{ matrix.node-version }}
-          path: coverage/ 
-        if: success() && steps.build-and-test.outputs.coverage 
-
-      - name: Deploy to staging (optional) 
-        uses: actions/checkout@v3  
-        if: github.event.name == 'push' && github.base_ref == 'main'  
+    
 
