--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
+    "twilio": "^5.1.1",
     "validator": "^13.12.0"
   }
 }
