--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,7 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1",
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^8.4.4",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
     "twilio": "^5.1.1",
